--- a/index.html
+++ b/index.html
@@ -1,24 +1,47 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="styles/sassfile.css" media="screen" title="no title" charset="utf-8">
+    <meta name="description" content="Alex Kim web developer portfolio" charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+    <link href='https://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles/jquery.fullPage.css" media="screen" title="no title" charset="utf-8">
-    <meta charset="utf-8">
+    <link rel="stylesheet" href="styles/sassfile.css" media="screen" title="no title" charset="utf-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+    <script src="scripts/jquery.fullPage.js" type="text/javascript"></script>
+    <script src="scripts/app.js" type="text/javascript"></script>
+
     <title>Alex Kim</title>
   </head>
   <body>
     <div id="fullpage">
-      <div class="section">
-        1
+
+      <div id="firstPage" class="section">
+        <h1>ALEX KIM</h1>
+        <h2>Hey!</h2>
+        <div id="nav">
+          <a class="navlink" href="#">About</a>
+          <a class="navlink" href="#">Portfolio</a>
+          <a class="navlink" href="#">Contact</a>
+        </div>
       </div>
-      <div class="section">
-        2
+
+      <div id="secondPage" class="section">
+        <h1>2</h1>
+        <div class="slide secondSlides"> Slide 1 </div>
+        <div class="slide secondSlides"> Slide 2 </div>
+        <div class="slide secondSlides"> Slide 3 </div>
+        <div class="slide secondSlides"> Slide 4 </div>
       </div>
-      <div class="section">
-        3
+
+      <div id="thirdPage" class="section">
+        <h1>3</h1>
       </div>
-      <div class="section">
-        4
+
+      <div id="fourthPage" class="section">
+        <h1>4</h1>
       </div>
     </div>
 
@@ -41,8 +64,4 @@
 
 
   </body>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-  <script src="scripts/jquery.fullPage.js" type="text/javascript"></script>
-  <script src="scripts/app.js" type="text/javascript"></script>
 </html>
