--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
 
       <!-- FIRST PAGE HERE======================= -->
       <div id="firstPage" class="section">
+        <!-- <div id="firstcontainer"> -->
         <img id="cello" alt="" />
 
         <div class="container">
           <div class="row">
             <div class="twelve columns">
-              <h1>ALEX KIM</h1>
+              <h1 id="name">ALEX KIM</h1>
             </div>
           </div>
           <div id="nav" class="row">
@@ -42,7 +43,8 @@
             </div>
           </div>
         </div>
-      </div>
+      <!-- </div> -->
+    </div>
       <!-- SECOND PAGE HERE======================= -->
 
       <div id="secondPage" class="section">
