working on showcase

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link href='https://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Libre+Baskerville' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Philosopher' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Grand+Hotel' rel='stylesheet' type='text/css'>
+
 
     <link rel="stylesheet" href="styles/jquery.fullPage.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="styles/sassfile.css" media="screen" title="no title" charset="utf-8">
@@ -74,7 +78,7 @@
               <p class="profiletext" >
                 I'm a professional hobbyist. As a <span class="red">web-developer</span>, I have been coding 80+ hours per week in the full stack. Independently and in teams, I've engineered a few apps that are open for you to <a  class="profiletext" href="#">view right here</a>.
                 <br><br>
-                When it's time to take a break from coding, I like to remind myself that <span class="red">I am human</span>. I played as Principal <span class="red">Cellist</span> in the Illinois Wesleyan Civic Orchestra, went on tour with my band, and later went on to be a pro-bike mechanic. I now have about 6 <span class="red">bikes</span>. I like meeting fellow nerds that are also passionate about nerdy things.
+                When it's time to take a break from coding, I like to remind myself that <span class="red">I am human</span> with my other interests. I played as Principal <span class="red">Cellist</span> in the Illinois Wesleyan Civic Orchestra, went on tour with my band, and later went on to be a pro-bike mechanic. I now have about 6 <span class="red">bikes</span>. I like meeting fellow nerds that are also passionate about nerdy things.
               </p>
             </div>
           </div>
@@ -84,10 +88,62 @@
       <!-- THIRD PAGE HERE======================= -->
       <div id="thirdPage" class="section">
         <h1 class="head">Projects</h1>
-
         <!-- PROJECT 1 ------------------>
         <div class="slide">
-
+          <h1 id="project4">melody</h1>
+          <div class="container">
+            <div class="row">
+              <div style="background-color:blue;" class="six columns">
+                <img class="projectimg" src="images/project4.png" alt="" />
+              </div>
+              <div style="background-color: rgb(50, 50, 50)" class="six columns">
+                <p style="font-family: 'Nunito', sans-serif; font-size: 18px; color: white;">Just like classical ear training, the game presents the player with a melody. The player must listen closely to the melody and decipher which notes were played. A keyboard, built with JavaScript, is available as either a tool to the player using clicks or the homerow of the keyboard.
+                </p>
+                <a href="http://alexekim.github.io/project1/">See it</a>
+                <a href="https://github.com/alexekim/alexekim.github.io/tree/master/project1">Github</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- END SLIDE 1 -->
+        <!-- PROJECT 2 ------------------>
+        <div class="slide">
+          <h1 id="project2">caspian</h1>
+          <div class="container">
+            <div class="row">
+              <div style="background-color:blue;" class="six columns">
+                <img class="projectimg" src="images/project2.png" alt="" />
+              </div>
+              <div style="background-color: rgb(50, 50, 50)" class="six columns">
+                <p style="font-family: 'Nunito', sans-serif; font-size: 18px; color: white;">Just like classical ear training, the game presents the player with a melody. The player must listen closely to the melody and decipher which notes were played. A keyboard, built with JavaScript, is available as either a tool to the player using clicks or the homerow of the keyboard.
+                </p>
+                <a href="http://alexekim.github.io/project1/">See it</a>
+                <a href="https://github.com/alexekim/alexekim.github.io/tree/master/project1">Github</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- END SLIDE 2 -->
+        <!-- PROJECT 3 ----------->
+        <div class="slide">
+          <h1 id="project3">ChiStreetArt</h1>
+          <div class="container">
+            <div class="row">
+              <div style="background-color:blue;" class="six columns">
+                <img class="projectimg" src="images/project3.png" alt="" />
+              </div>
+              <div style="background-color: rgb(50, 50, 50)" class="six columns">
+                <p style="font-family: 'Nunito', sans-serif; font-size: 18px; color: white;">Just like classical ear training, the game presents the player with a melody. The player must listen closely to the melody and decipher which notes were played. A keyboard, built with JavaScript, is available as either a tool to the player using clicks or the homerow of the keyboard.
+                </p>
+                <a href="http://alexekim.github.io/project1/">See it</a>
+                <a href="https://github.com/alexekim/alexekim.github.io/tree/master/project1">Github</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- END SLIDE 3 -->
+        <!-- PROJECT 4 ----------------->
+        <div class="slide">
           <h1 id="project1">Ear Training</h1>
           <div class="container">
             <div class="row">
@@ -95,29 +151,79 @@
                 <img class="projectimg" src="images/project1.png" alt="" />
               </div>
               <div style="background-color: rgb(50, 50, 50)" class="six columns">
-                <p style="font-family: 'Nunito', sans-serif; font-size: 18px;">Just like classical ear training, the game presents the player with a melody. The player must listen closely to the melody and decipher which notes were played. A keyboard, built with JavaScript, is available as either a tool to the player using clicks or the homerow of the keyboard.
+                <p style="font-family: 'Nunito', sans-serif; font-size: 18px; color: white;">Just like classical ear training, the game presents the player with a melody. The player must listen closely to the melody and decipher which notes were played. A keyboard, built with JavaScript, is available as either a tool to the player using clicks or the homerow of the keyboard.
                 </p>
                 <a href="http://alexekim.github.io/project1/">See it</a>
                 <a href="https://github.com/alexekim/alexekim.github.io/tree/master/project1">Github</a>
               </div>
-
             </div>
           </div>
         </div>
+        <!-- END SLIDE 4 -->
 
-        <!-- PROJECT 2 ------------------>
-        <div class="slide ">
+        <!-- START TEST SLIDE 5 -->
+        <div id="project1big" class="slide">
+          <div class="container">
+            <div class="row">
+              <div class="nine columns offset-by-three">
+                <p class="bigdesc">HIHIHIHIIHIHI</p>
+              </div>
+            </div>
 
-
-      </div>
-
-        <div class="slide ">
+          </div>
 
         </div>
-        <div class="slide "> Slide 4 </div>
+        <!-- END SLIDE 5 -->
+        <!-- START TEST SLIDE 6 -->
+        <div id="project2big" class="slide">
+          <div class="container">
+            <div class="row">
+              <div class="nine columns offset-by-three">
+                <p class="bigdesc">HIHIHIHIIHIHI</p>
+
+              </div>
+            </div>
+
+          </div>
+        </div>
+        <!-- END SLIDE 6 -->
+        <!-- START TEST SLIDE 7 -->
+        <div id="project3big" class="slide">
+          <div class="container">
+            <div class="row">
+              <div class="nine columns offset-by-three">
+                <p class="bigdesc">HIHIHIHIIHIHI</p>
+
+              </div>
+            </div>
+
+          </div>
+        </div>
+        <!-- END SLIDE 7 -->
+        <!-- START TEST SLIDE 8 -->
+        <div id="project4big" class="slide">
+          <div class="container">
+            <div class="row">
+              <div class="nine columns offset-by-three">
+                <p class="bigdesc">HIHIHIHIIHIHI</p>
+
+              </div>
+            </div>
+
+          </div>
+        </div>
+        <!-- END SLIDE 8 -->
+
+
+
+
+
+
+
 
       </div>
-      <!-- FOURTH PAGE HERE======================= -->
+      <!-- END THIRD PAGE -->
+      <!-- FOURTH PAGE START HERE======================= -->
       <div id="fourthPage" class="section">
 
         <h1>Contact</h1>
