--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
 
           <div class="row">
             <div class="twelve columns">
-              <h1 class="head" >About</h1>
+              <h1 class="head">About</h1>
             </div>
           </div>
           <div class="row">
             <div id="profile" class="three columns">
               <img id="mug" src="images/squarealex.png" alt="" />
-              <h4 class="profiletext" >Alex Kim!</h4>
+              <h4 id="mugtext" >Alex Kim!</h4>
             </div>
 
             <div class="offset-by-one eight columns">
@@ -87,20 +87,20 @@
 
       <!-- THIRD PAGE HERE======================= -->
       <div id="thirdPage" class="section">
-        <h1 class="head">Projects</h1>
+        <h1 style="margin-bottom:-6%; padding: 1%;" class="head">Projects</h1>
         <!-- PROJECT 1 ------------------>
         <div class="slide">
           <h1 id="project4">melody</h1>
-          <div class="container">
+          <div style="background-color: rgba(50, 50, 50, .25); padding: 2%" class="container">
             <div class="row">
-              <div style="background-color:blue;" class="six columns">
+              <div class="six columns">
                 <img class="projectimg" src="images/project4.png" alt="" />
               </div>
-              <div style="background-color: rgb(50, 50, 50)" class="six columns">
-                <p style="font-family: 'Nunito', sans-serif; font-size: 18px; color: white;">Just like classical ear training, the game presents the player with a melody. The player must listen closely to the melody and decipher which notes were played. A keyboard, built with JavaScript, is available as either a tool to the player using clicks or the homerow of the keyboard.
+              <div style="background-color: rgba(50, 50, 50, .1); padding: 1%;" class="six columns">
+                <p style="font-family: 'Nunito', sans-serif; font-size: 18px; color: black;">Just like classical ear training, the game presents the player with a melody. The player must listen closely to the melody and decipher which notes were played. A keyboard, built with JavaScript, is available as either a tool to the player using clicks or the homerow of the keyboard.
                 </p>
-                <a href="http://alexekim.github.io/project1/">See it</a>
-                <a href="https://github.com/alexekim/alexekim.github.io/tree/master/project1">Github</a>
+                <a class="projectlinks" href="http://alexekim.github.io/project1/">See it</a>
+                <a class="projectlinks" style="position:absolute; right:5%;" href="https://github.com/alexekim/alexekim.github.io/tree/master/project1">Github</a>
               </div>
             </div>
           </div>
@@ -109,16 +109,16 @@
         <!-- PROJECT 2 ------------------>
         <div class="slide">
           <h1 id="project2">caspian</h1>
-          <div class="container">
+          <div style="background-color: rgba(50, 50, 50, .25); padding: 2%" class="container">
             <div class="row">
-              <div style="background-color:blue;" class="six columns">
+              <div class="six columns">
                 <img class="projectimg" src="images/project2.png" alt="" />
               </div>
-              <div style="background-color: rgb(50, 50, 50)" class="six columns">
-                <p style="font-family: 'Nunito', sans-serif; font-size: 18px; color: white;">Just like classical ear training, the game presents the player with a melody. The player must listen closely to the melody and decipher which notes were played. A keyboard, built with JavaScript, is available as either a tool to the player using clicks or the homerow of the keyboard.
+              <div style="background-color: rgba(50, 50, 50, .1); padding: 1%;" class="six columns">
+                <p style="font-family: 'Nunito', sans-serif; font-size: 18px; color: black;">Just like classical ear training, the game presents the player with a melody. The player must listen closely to the melody and decipher which notes were played. A keyboard, built with JavaScript, is available as either a tool to the player using clicks or the homerow of the keyboard.
                 </p>
-                <a href="http://alexekim.github.io/project1/">See it</a>
-                <a href="https://github.com/alexekim/alexekim.github.io/tree/master/project1">Github</a>
+                <a class="projectlinks" href="http://alexekim.github.io/project1/">See it</a>
+                <a class="projectlinks" style="position:absolute; right:5%;" href="https://github.com/alexekim/alexekim.github.io/tree/master/project1">Github</a>
               </div>
             </div>
           </div>
@@ -127,16 +127,16 @@
         <!-- PROJECT 3 ----------->
         <div class="slide">
           <h1 id="project3">ChiStreetArt</h1>
-          <div class="container">
+          <div style="background-color: rgba(50, 50, 50, .25); padding: 2%" class="container">
             <div class="row">
-              <div style="background-color:blue;" class="six columns">
+              <div class="six columns">
                 <img class="projectimg" src="images/project3.png" alt="" />
               </div>
-              <div style="background-color: rgb(50, 50, 50)" class="six columns">
-                <p style="font-family: 'Nunito', sans-serif; font-size: 18px; color: white;">Just like classical ear training, the game presents the player with a melody. The player must listen closely to the melody and decipher which notes were played. A keyboard, built with JavaScript, is available as either a tool to the player using clicks or the homerow of the keyboard.
+              <div style="background-color: rgba(50, 50, 50, .1); padding: 1%;" class="six columns">
+                <p style="font-family: 'Nunito', sans-serif; font-size: 18px; color: black;">Just like classical ear training, the game presents the player with a melody. The player must listen closely to the melody and decipher which notes were played. A keyboard, built with JavaScript, is available as either a tool to the player using clicks or the homerow of the keyboard.
                 </p>
-                <a href="http://alexekim.github.io/project1/">See it</a>
-                <a href="https://github.com/alexekim/alexekim.github.io/tree/master/project1">Github</a>
+                <a class="projectlinks" href="http://alexekim.github.io/project1/">See it</a>
+                <a class="projectlinks" style="position:absolute; right:5%;" href="https://github.com/alexekim/alexekim.github.io/tree/master/project1">Github</a>
               </div>
             </div>
           </div>
@@ -145,16 +145,16 @@
         <!-- PROJECT 4 ----------------->
         <div class="slide">
           <h1 id="project1">Ear Training</h1>
-          <div class="container">
+          <div style="background-color: rgba(50, 50, 50, .25); padding: 2%" class="container">
             <div class="row">
-              <div style="background-color:blue;" class="six columns">
+              <div class="six columns">
                 <img class="projectimg" src="images/project1.png" alt="" />
               </div>
-              <div style="background-color: rgb(50, 50, 50)" class="six columns">
-                <p style="font-family: 'Nunito', sans-serif; font-size: 18px; color: white;">Just like classical ear training, the game presents the player with a melody. The player must listen closely to the melody and decipher which notes were played. A keyboard, built with JavaScript, is available as either a tool to the player using clicks or the homerow of the keyboard.
+              <div style="background-color: rgba(50, 50, 50, .1); padding: 1%;" class="six columns">
+                <p style="font-family: 'Nunito', sans-serif; font-size: 18px; color: black;">Just like classical ear training, the game presents the player with a melody. The player must listen closely to the melody and decipher which notes were played. A keyboard, built with JavaScript, is available as either a tool to the player using clicks or the homerow of the keyboard.
                 </p>
-                <a href="http://alexekim.github.io/project1/">See it</a>
-                <a href="https://github.com/alexekim/alexekim.github.io/tree/master/project1">Github</a>
+                <a class="projectlinks" href="http://alexekim.github.io/project1/">See it</a>
+                <a class="projectlinks" style="position:absolute; right:5%;" href="https://github.com/alexekim/alexekim.github.io/tree/master/project1">Github</a>
               </div>
             </div>
           </div>
@@ -162,11 +162,16 @@
         <!-- END SLIDE 4 -->
 
         <!-- START TEST SLIDE 5 -->
-        <div id="project1big" class="slide">
+        <div id="project4big" class="slide">
           <div class="container">
             <div class="row">
-              <div class="nine columns offset-by-three">
-                <p class="bigdesc">HIHIHIHIIHIHI</p>
+              <div class="offset-by-three six columns">
+                <p class="bigdesc">
+                  Melody is a place for musicians to find each other.
+                  <br><br>
+                  Musicians often enjoy being part of the music scene around them, but it can often be difficult to find other musicians when not playing regularly, or being away from school or the professional scene.<br><br>
+                  Melody allows its users to browse through an archive of musicians' profiles and save others as favorites for possible contact. No longer should you need to worry about finding other musicians in your area!
+                </p>
               </div>
             </div>
 
@@ -178,7 +183,7 @@
         <div id="project2big" class="slide">
           <div class="container">
             <div class="row">
-              <div class="nine columns offset-by-three">
+              <div class="offset-by-three six columns">
                 <p class="bigdesc">HIHIHIHIIHIHI</p>
 
               </div>
@@ -191,7 +196,7 @@
         <div id="project3big" class="slide">
           <div class="container">
             <div class="row">
-              <div class="nine columns offset-by-three">
+              <div class="offset-by-three six columns">
                 <p class="bigdesc">HIHIHIHIIHIHI</p>
 
               </div>
@@ -204,7 +209,7 @@
         <div id="project4big" class="slide">
           <div class="container">
             <div class="row">
-              <div class="nine columns offset-by-three">
+              <div class="offset-by-three six columns">
                 <p class="bigdesc">HIHIHIHIIHIHI</p>
 
               </div>
@@ -226,7 +231,7 @@
       <!-- FOURTH PAGE START HERE======================= -->
       <div id="fourthPage" class="section">
 
-        <h1>Contact</h1>
+        <h1 class="head">Contact</h1>
       </div>
     </div>
 
