finished for now

--- a/index.html
+++ b/index.html
@@ -46,15 +46,23 @@
           </div>
 
           <div id="nav" class="row">
-            <div class="four columns">
-              <a class="navlink" href="#">About</a>
+            <div class="navlink twelve columns">
+              Welcome.
+            </div>
+            <div class="row">
+              <div style="margin: 0 auto; position:absolute; bottom: -120px;" class="twelve columns">
+                <img src="images/arrow.png" alt="" />
+              </div>
+            </div>
+            <!-- <div id="myMenu" class="four columns">
+              <a class="navlink" href="#secondPage">About</a>
             </div>
             <div class="four columns">
-              <a class="navlink" href="#">Portfolio</a>
+              <a class="navlink" href="#thirdPage">Portfolio</a>
             </div>
             <div class="four columns">
-              <a class="navlink" href="#">Contact</a>
-            </div>
+              <a  class="navlink" href="#fourthPage">Contact</a>
+            </div> -->
           </div>
         </div>
       </div>
@@ -76,7 +84,7 @@
 
             <div class="offset-by-one eight columns">
               <p class="profiletext" >
-                I'm a professional hobbyist. As a <span class="red">web-developer</span>, I have been coding 80+ hours per week in the full stack. Independently and in teams, I've engineered a few apps that are open for you to <a  class="profiletext" href="#">view right here</a>.
+                I'm a professional hobbyist. As a <span class="red">web-developer</span>, I have been coding 80+ hours per week in the full stack. Independently and in teams, I've engineered a few apps that are open for you to view on the next page.
                 <br><br>
                 When it's time to take a break from coding, I like to remind myself that <span class="red">I am human</span> with my other interests. I played as Principal <span class="red">Cellist</span> in the Illinois Wesleyan Civic Orchestra, went on tour with my band, and later went on to be a pro-bike mechanic. I now have about 6 <span class="red">bikes</span>. I like meeting fellow nerds that are also passionate about nerdy things.
               </p>
@@ -97,9 +105,9 @@
                 <img class="projectimg" src="images/project4.png" alt="" />
               </div>
               <div style="background-color: rgba(50, 50, 50, .1); padding: 1%;" class="six columns">
-                <p style="font-family: 'Nunito', sans-serif; font-size: 18px; color: black;">Just like classical ear training, the game presents the player with a melody. The player must listen closely to the melody and decipher which notes were played. A keyboard, built with JavaScript, is available as either a tool to the player using clicks or the homerow of the keyboard.
+                <p style="font-family: 'Nunito', sans-serif; font-size: 18px; color: black;">Melody is a place for musicians to find each other. It allows its users to browse through an archive of musicians' profiles and save others as favorites for possible contact. br No longer should you need to worry about finding other musicians in your area!<br>This was my first independent full-stack application in which I used node.JS, Express.JS, MongoDB, Handlebars, and bCrypt, to name a few technologies.
                 </p>
-                <a class="projectlinks" href="http://alexekim.github.io/project1/">See it</a>
+                <a class="projectlinks" href="https://melody-app.herokuapp.com/">See it</a>
                 <a class="projectlinks" style="position:absolute; right:5%;" href="https://github.com/alexekim/alexekim.github.io/tree/master/project1">Github</a>
               </div>
             </div>
@@ -115,10 +123,10 @@
                 <img class="projectimg" src="images/project2.png" alt="" />
               </div>
               <div style="background-color: rgba(50, 50, 50, .1); padding: 1%;" class="six columns">
-                <p style="font-family: 'Nunito', sans-serif; font-size: 18px; color: black;">Just like classical ear training, the game presents the player with a melody. The player must listen closely to the melody and decipher which notes were played. A keyboard, built with JavaScript, is available as either a tool to the player using clicks or the homerow of the keyboard.
+                <p style="font-family: 'Nunito', sans-serif; font-size: 18px; color: black;">This can be classified as an Emergency Management app. It is meant to present important In-Case-of-Emergency (ICE) information. The app is meant to be used while camping, and contains the ability to hold information that is specific to the user's trip.<br><br>Written in Ruby with Sinatra &amp; ActiveRecord.
                 </p>
-                <a class="projectlinks" href="http://alexekim.github.io/project1/">See it</a>
-                <a class="projectlinks" style="position:absolute; right:5%;" href="https://github.com/alexekim/alexekim.github.io/tree/master/project1">Github</a>
+                <a class="projectlinks" href="https://caspian-app.herokuapp.com/">See it</a>
+                <a class="projectlinks" style="position:absolute; right:5%;" href="https://github.com/alexekim/project_caspian">Github</a>
               </div>
             </div>
           </div>
@@ -133,10 +141,10 @@
                 <img class="projectimg" src="images/project3.png" alt="" />
               </div>
               <div style="background-color: rgba(50, 50, 50, .1); padding: 1%;" class="six columns">
-                <p style="font-family: 'Nunito', sans-serif; font-size: 18px; color: black;">Just like classical ear training, the game presents the player with a melody. The player must listen closely to the melody and decipher which notes were played. A keyboard, built with JavaScript, is available as either a tool to the player using clicks or the homerow of the keyboard.
+                <p style="font-family: 'Nunito', sans-serif; font-size: 18px; color: black;">Just like any other world class city, Chicago offers an amazing array of art that can be seen in a museum or on a brick wall. A ride up and down the L will only expose you to a fraction of the Chicago street art on display throughout the city. <br><br>What I personally worked on in this app was back-end elements. I practiced a great deal of Node.JS and Express.JS.
                 </p>
-                <a class="projectlinks" href="http://alexekim.github.io/project1/">See it</a>
-                <a class="projectlinks" style="position:absolute; right:5%;" href="https://github.com/alexekim/alexekim.github.io/tree/master/project1">Github</a>
+                <a class="projectlinks" href="http://chistreetart.herokuapp.com/">See it</a>
+                <a class="projectlinks" style="position:absolute; right:5%;" href="https://github.com/Platypi-posse/client-app">Github</a>
               </div>
             </div>
           </div>
@@ -162,7 +170,7 @@
         <!-- END SLIDE 4 -->
 
         <!-- START TEST SLIDE 5 -->
-        <div id="project4big" class="slide">
+        <!-- <div id="project4big" class="slide">
           <div class="container">
             <div class="row">
               <div class="offset-by-three six columns">
@@ -177,10 +185,10 @@
 
           </div>
 
-        </div>
+        </div> -->
         <!-- END SLIDE 5 -->
         <!-- START TEST SLIDE 6 -->
-        <div id="project2big" class="slide">
+        <!-- <div id="project2big" class="slide">
           <div class="container">
             <div class="row">
               <div class="offset-by-three six columns">
@@ -190,10 +198,10 @@
             </div>
 
           </div>
-        </div>
+        </div> -->
         <!-- END SLIDE 6 -->
         <!-- START TEST SLIDE 7 -->
-        <div id="project3big" class="slide">
+        <!-- <div id="project3big" class="slide">
           <div class="container">
             <div class="row">
               <div class="offset-by-three six columns">
@@ -203,10 +211,10 @@
             </div>
 
           </div>
-        </div>
+        </div> -->
         <!-- END SLIDE 7 -->
         <!-- START TEST SLIDE 8 -->
-        <div id="project4big" class="slide">
+        <!-- <div id="project4big" class="slide">
           <div class="container">
             <div class="row">
               <div class="offset-by-three six columns">
@@ -216,7 +224,7 @@
             </div>
 
           </div>
-        </div>
+        </div> -->
         <!-- END SLIDE 8 -->
 
 
@@ -230,8 +238,19 @@
       <!-- END THIRD PAGE -->
       <!-- FOURTH PAGE START HERE======================= -->
       <div id="fourthPage" class="section">
+      <div class="container">
+        <div class="row">
+          <div style="text-align:center;" class="twelve columns">
+            <h1 class="head">Contact</h1>
+            <p class="red">hey! let's work/play/perform/ride together.</p>
+            <a style="padding-left:1em;"class="navlink" href="mailto:alexander.e.kim@gmail.com?subject=Hey, Alex" "email me">email</a>
+            <a style="padding-left:1em;"class="navlink" href="https://www.linkedin.com/in/alexekim">linkedin</a>
+            <a style="padding-left:1em;"class="navlink" href="https://github.com/alexekim/">github</a>
+            <p style="font-size:12px;">all photos taken by Alex!</p>
+          </div>
+        </div>
+      </div>
 
-        <h1 class="head">Contact</h1>
       </div>
     </div>
 
