--- a/index.html
+++ b/index.html
@@ -23,8 +23,41 @@
     <script src="scripts/jquery.fullPage.js" type="text/javascript"></script>
 
     <title>Alex Kim</title>
+    <style media="screen">
+  .progressContainer {
+    left:0;
+    width: 100%;
+    height: 0.4em;
+    margin-bottom: 0px;
+    position: fixed;
+    bottom: 0px;
+    overflow: hidden;
+    /*background-color: white;*/
+    content: "";
+    display: table;
+    table-layout: fixed;
+    z-index: 99;
+  }
+
+  .progressBar {
+    width: 0%;
+    float: left;
+    height: 100%;
+    z-index:99;
+    max-width: 100%;
+    background-color: #ed1b2d;
+    -webkit-transition: width .15s ease;
+    -o-transition: width .15s ease;
+    transition: width .15s ease;
+    z-index: 99;
+  }
+</style>
   </head>
   <body>
+<div class="progressContainer">
+	<div class="progressBar">
+	</div>
+</div>
 
     <div id="fullpage">
       <!-- FIRST PAGE HERE======================= -->
@@ -259,5 +292,17 @@
 
   </body>
   <script src="scripts/app.js" type="text/javascript"></script>
+  <script type="text/javascript">
+$(window).load(function(){
+$(window).scroll(function() {
+  var wintop = $(window).scrollTop(), docheight = $('body').height(), winheight = $(window).height();
+ 
+  var totalScroll = (wintop/(docheight-winheight))*100;
+ 
+  $(".progressBar").css("width",totalScroll+"%");
+});
+
+});
+</script>
 
 </html>
